2008-10-26	Dan Nicholson	<dnicholson@linuxfromscratch.org>
	* lfs/init.d/functions: Remove stale pid files when encountered
	  in loadproc/killproc/reloadproc. When the bootscript specifies
	  a pid file to use with the "-p pidfile" argument, *proc
	  functions previously bailed out when the referenced file
	  contains an invalid pid.

2008-10-23	DJ Lucas	<dj@linuxfromscratch.org>
	* lfs/init.d/console: Removed BROKEN_COMPOSE as kernel patch has
	  been accepted upstream.

2008-05-21	Bryan Kadzban	<bryan@linuxfromscratch.org>
	* lfs/init.d/udev: lfs/init.d/udev_retry: Use new udevadm program.

2007-08-20	DJ Lucas	<dj@linuxfromscratch.org>
	* lfs/init.d/setclock: Added missing 'stop' argument to usage text

2007-08-13	Dan Nicholson	<dnicholson@linuxfromscratch.org>
	* lfs/init.d/checkfs: Don't suppress error messages from the screen.

2007-07-18	Dan Nicholson	<dnicholson@linuxfromscratch.org>
	* Makefile, lfs/init.d/consolelog: New bootscript controlling the
	  kernel log level on the console. This is controlled by the LOGLEVEL
	  variable in /etc/sysconfig/console.
	* lfs/init.d/modules: Remove the log level handling since this is
	  done in the consolelog script now.
	* lfs/init.d/modules: Clean up the script by removing the file
	  descriptor duplication and instead just redirecting
	  /etc/sysconfig/modules to the input of the while loop.

2007-06-16	Dan Nicholson	<dnicholson@linuxfromscratch.org>
	* lfs/init.d/mountfs, lfs/init.d/mountkernfs, lfs/init.d/setclock,
	  lfs/init.d/modules, lfs/sysconfig/network-devices/if{up,down}:
	  Don't suppress stderr during bootscripts unless necessary. This
	  would prevent potentially critical messages from reaching the screen.

2007-04-24	Dan Nicholson	<dnicholson@linuxfromscratch.org>
	* lfs/init.d/functions: When killproc is executed, it checks that
	  the process is still running, sleeps if it is, then checks again.
	  The sleep is 1 second in between checks. By sleeping for 0.1 seconds